<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile1_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/msg_header_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardCornerRadius="35dp"
                >

                <ImageView
                    android:id="@+id/ivProfileDp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/placeholder_image"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsernameProfile"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

        </LinearLayout>


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:rowCount="2"
                android:columnCount="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_posts"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tvTotalPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:text="15"/>
                <TextView
                    android:id="@+id/tvFound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:text="7"/>
                <TextView
                    android:id="@+id/tvLost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:text="8"/>

            </GridLayout>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="@dimen/_15sdp"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_posts"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found_posts"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_post"/>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpViewPosts"
            android:background="@color/alpha_20purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>