<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logothemedbg"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50dp"
            android:layout_marginBottom="-35dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30sp"/>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundMode="outline"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/email"

                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/password"

                        />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_login_details"
                android:gravity="right"
                android:layout_marginRight="30sp"
                android:textSize="14sp"
                android:padding="5dp"
                tools:ignore="RtlHardcoded"
                />
            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/purple"
                android:layout_marginRight="15dp"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="15dp"
                tools:ignore="RtlHardcoded"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/purple"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:gravity="center"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded"
                />
                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_up"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>