<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".newPostFragment"
    android:background="@drawable/gradient_background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:text="@string/add_your_post"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivItemPic"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:src="@drawable/profile"
                    android:gravity="center"
                    android:layout_marginTop="15dp"/>
                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple"
                    android:textStyle="bold"
                    android:text="@string/add_photo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:text="@string/note_if_the_item_is_lost_then_it_is_optional_to_add_photo_of_item"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etItemName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/edittext_shape"
                                android:hint="Item Name"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        >
                      <RadioGroup
                          android:id="@+id/rgStatus"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          >
                          <RadioButton
                              android:id="@+id/rbLost"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/lost"/>
                          <RadioButton
                              android:id="@+id/rbFound"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/found"/>
                      </RadioGroup>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/description"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/location"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPostMessege"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="Messege (Optional)"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/progressBarNewPost"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/btnPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:backgroundTint="@color/purple"
                    android:layout_marginRight="15dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</FrameLayout>