<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logothemedbg"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivDp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/btnAddPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple"
                android:textStyle="bold"
                android:text="@string/add_profile_picture"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/first_name"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLastName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/last_name"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/phone_no"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginBottom="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRePassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_shape"
                            android:hint="@string/re_enter_password"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/purple"
                android:layout_marginRight="15dp"
                />


        </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>